--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
     <br>
     <div class="w3-row">
         <div class="w3-col s12">
-            <button id="selectMemoryCardButton" class="w3-button w3-blue w3-round">Select Memory Card</button>
+            <button id="btnSelectMemoryCard" class="w3-button w3-blue w3-round">Select Memory Card</button>
             <span id="pathIndicator" class="w3-text-white">No card selected</span>
             <br>
-            <button id="createFileStructureButton" class="w3-button w3-orange w3-round">Create File Structure</button>
+            <button id="btnCreateFileStructure" class="w3-button w3-orange w3-round">Create File Structure</button>
             <span id="createDirectoryIndicator" class="w3-text-white">Memory card is empty !</span>
             <br>
             <div class="w3-row", id="folders">
