--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
             <br>
             <button id="btnCreateFileStructure" class="w3-button w3-orange w3-round">Create File Structure</button>
             <span id="createDirectoryIndicator" class="w3-text-white">Memory card is empty !</span>
-            <br>
-            <div class="w3-row", id="folders">
+
+            <div class="folders">
                 <button id="btnOpenThemes" class="w3-button w3-red w3-round">Open Themes</button>
                 <br>
                 <button id="btnOpenGames" class="w3-button w3-red w3-round">Open Games</button>
