--- a/src/index.html
+++ b/src/index.html
@@ -14,24 +14,24 @@
     <br>
     <div class="w3-row">
         <div class="w3-col s12">
-            <button id="btnSelectMemoryCard" class="w3-button w3-blue w3-round">Select Memory Card</button>
+            <button id="btnSelectMemoryCard" class="w3-button w3-blue w3-ripple w3-round">Select Memory Card</button>
             <span id="pathIndicator" class="w3-text-white">No card selected</span>
             <br>
-            <button id="btnCreateFileStructure" class="w3-button w3-orange w3-round">Create File Structure</button>
-            <span id="createDirectoryIndicator" class="w3-text-white">Memory card is empty !</span>
+            <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create File Structure</button>
+            <span id="createDirectoryIndicator" class="w3-text-white">Memory card is empty</span>
 
             <div class="folders">
-                <button id="btnOpenThemes" class="w3-button w3-red w3-round">Open Themes</button>
+                <button id="btnOpenThemes" class="w3-button w3-gray w3-ripple w3-round">Themes</button>
                 <br>
-                <button id="btnOpenGames" class="w3-button w3-red w3-round">Open Games</button>
+                <button id="btnOpenGames" class="w3-button w3-gray w3-ripple w3-round">Games</button>
                 <br>
-                <button id="btnOpenMusic" class="w3-button w3-red w3-round">Open Music</button>
+                <button id="btnOpenMusic" class="w3-button w3-gray w3-ripple w3-round">Music</button>
                 <br>
-                <button id="btnOpenVideo" class="w3-button w3-red w3-round">Open Video</button>
+                <button id="btnOpenVideo" class="w3-button w3-gray w3-ripple w3-round">Video</button>
                 <br>
-                <button id="btnOpenPictures" class="w3-button w3-red w3-round">Open Pictures</button>
+                <button id="btnOpenPictures" class="w3-button w3-gray w3-ripple w3-round">Pictures</button>
                 <br>
-                <button id="btnOpenSaveFiles" class="w3-button w3-red w3-round">Open Save Files</button>
+                <button id="btnOpenSaveFiles" class="w3-button w3-gray w3-ripple w3-round">Save Files</button>
             </div>
         </div>
     </div>
