open folder indicator

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,13 @@
             <button id="btnSelectMemoryCard" class="w3-button w3-blue w3-ripple w3-round">Select Memory Card</button>
             <span id="pathIndicator" class="w3-text-white">No card selected</span>
             <br>
-            <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create File Structure</button>
+            <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create File Structure
+            </button>
             <span id="createDirectoryIndicator" class="w3-text-white">Memory card is empty</span>
 
             <div class="folders">
+                <span id="openFilesIndicator" class="w3-text-white">Open folder</span>
+                <br>
                 <button id="btnOpenThemes" class="w3-button w3-gray w3-ripple w3-round">Themes</button>
                 <br>
                 <button id="btnOpenGames" class="w3-button w3-gray w3-ripple w3-round">Games</button>
