--- a/src/index.html
+++ b/src/index.html
@@ -11,30 +11,54 @@
 
 <!-- Main Content -->
 <div class="w3-container" style="background-color: transparent;">
-    <br>
     <div class="w3-row">
-        <div class="w3-col s12">
+        <br>
+        <div class="main-button-container">
             <button id="btnSelectMemoryCard" class="w3-button w3-blue w3-ripple w3-round">Select Memory Card</button>
-            <span id="pathIndicator" class="w3-text-white">No card selected</span>
-            <br>
+            <span id="pathIndicator">No card selected</span>
+        </div>
+        <div class="main-button-container">
             <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create File Structure
             </button>
             <span id="createDirectoryIndicator" class="w3-text-white">Memory card is empty</span>
+        </div>
 
-            <div class="folders">
-                <span id="openFilesIndicator" class="w3-text-white">Open folder</span>
+        <div class="flex-container">
+            <div class="section">
+                <!-- Folders -->
                 <br>
-                <button id="btnOpenThemes" class="w3-button w3-gray w3-ripple w3-round">Themes</button>
+                <h3 class="w3-text-white">Open Folder</h3>
+                <div class="buttons">
+                    <button id="btnOpenThemes" class="w3-button w3-gray w3-ripple w3-round">Themes</button>
+                    <br>
+                    <button id="btnOpenGames" class="w3-button w3-gray w3-ripple w3-round">Games</button>
+                    <br>
+                    <button id="btnOpenMusic" class="w3-button w3-gray w3-ripple w3-round">Music</button>
+                    <br>
+                    <button id="btnOpenVideo" class="w3-button w3-gray w3-ripple w3-round">Video</button>
+                    <br>
+                    <button id="btnOpenPictures" class="w3-button w3-gray w3-ripple w3-round">Pictures</button>
+                    <br>
+                    <button id="btnOpenSaveFiles" class="w3-button w3-gray w3-ripple w3-round">Save Files</button>
+                </div>
+            </div>
+
+            <div class="section">
+                <!-- Functions -->
                 <br>
-                <button id="btnOpenGames" class="w3-button w3-gray w3-ripple w3-round">Games</button>
-                <br>
-                <button id="btnOpenMusic" class="w3-button w3-gray w3-ripple w3-round">Music</button>
-                <br>
-                <button id="btnOpenVideo" class="w3-button w3-gray w3-ripple w3-round">Video</button>
-                <br>
-                <button id="btnOpenPictures" class="w3-button w3-gray w3-ripple w3-round">Pictures</button>
-                <br>
-                <button id="btnOpenSaveFiles" class="w3-button w3-gray w3-ripple w3-round">Save Files</button>
+                <h3 class="w3-text-white">Functions</h3>
+                <div class="buttons">
+                    <button id="btnFunction1" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4</button>
+                    <br>
+                    <button id="btnFunction2" class="w3-button w3-deep-purple w3-ripple w3-round">Transfer OFW update
+                    </button>
+                    <br>
+                    <button id="btnFunction3" class="w3-button w3-deep-purple w3-ripple w3-round">Create music playlist
+                    </button>
+                    <br>
+                    <button id="btnFunction4" class="w3-button w3-deep-purple w3-ripple w3-round">Organize games
+                    </button>
+                </div>
             </div>
         </div>
     </div>
