--- a/src/index.html
+++ b/src/index.html
@@ -48,15 +48,15 @@
                 <br>
                 <h3 class="w3-text-white">Functions</h3>
                 <div class="buttons">
-                    <button id="btnFunction1" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4</button>
+                    <button id="btnExtractArk4" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4</button>
                     <br>
-                    <button id="btnFunction2" class="w3-button w3-deep-purple w3-ripple w3-round">Transfer OFW update
+                    <button id="btnTransferOfw" class="w3-button w3-deep-purple w3-ripple w3-round">Transfer OFW update
                     </button>
                     <br>
-                    <button id="btnFunction3" class="w3-button w3-deep-purple w3-ripple w3-round">Create music playlist
+                    <button id="btnCreatePlaylist" class="w3-button w3-deep-purple w3-ripple w3-round">Create music playlist
                     </button>
                     <br>
-                    <button id="btnFunction4" class="w3-button w3-deep-purple w3-ripple w3-round">Organize games
+                    <button id="btnOrganizeGames" class="w3-button w3-deep-purple w3-ripple w3-round">Organize games
                     </button>
                 </div>
             </div>
@@ -78,7 +78,12 @@
         <li></li>
         <li></li>
     </ul>
+    <div class="ocean">
+        <div class="wave"></div>
+        <div class="wave wave2"></div>
+    </div>
 </div>
+
 
 <script src="../dist/renderer.js" defer></script>
 </body>
