--- a/src/index.html
+++ b/src/index.html
@@ -5,60 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="../src/styles.css">
-    <title>PSP Tool</title>
+    <title>PSP Content Manager</title>
 </head>
 <body>
 
 <!-- Main Content -->
 <div class="w3-container" style="background-color: transparent;">
     <div class="w3-row">
-        <br>
-        <div class="main-button-container">
+        <div class="button-container">
             <button id="btnSelectMemoryCard" class="w3-button w3-blue w3-ripple w3-round">Select Memory Card</button>
             <span id="pathIndicator">No card selected</span>
         </div>
-        <div class="main-button-container">
-            <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create File Structure
-            </button>
-            <span id="createDirectoryIndicator" class="w3-text-white">Memory card is empty</span>
+        <div class="button-container">
+            <button id="brnOpenCardDir" class="w3-button w3-orange w3-ripple w3-round">Open</button>
+        </div>
+        <!-- Tab buttons -->
+        <div class="tab-buttons">
+            <div onclick="openTab(event, 'OpenFolder')" class="active">Folders</div>
+            <div onclick="openTab(event, 'Functions')">Functions</div>
+        </div>
+        <div class="w3-border-top w3-border-white"></div>
+
+        <!-- Tab content -->
+        <div id="OpenFolder" class="tabcontent" style="display: block;">
+            <h3 class="w3-text-white">Navigate to PSP folder</h3>
+            <div class="buttons">
+                <button id="btnOpenThemes" class="w3-button w3-gray w3-ripple w3-round">Themes</button>
+                <button id="btnOpenGames" class="w3-button w3-gray w3-ripple w3-round">Games</button>
+                <button id="btnOpenMusic" class="w3-button w3-gray w3-ripple w3-round">Music</button>
+                <button id="btnOpenVideo" class="w3-button w3-gray w3-ripple w3-round">Video</button>
+                <button id="btnOpenPictures" class="w3-button w3-gray w3-ripple w3-round">Pictures</button>
+                <button id="btnOpenSaveFiles" class="w3-button w3-gray w3-ripple w3-round">Save Files</button>
+                <button id="btnOpenPlugins" class="w3-button w3-gray w3-ripple w3-round">Plugins</button>
+            </div>
         </div>
 
-        <div class="flex-container">
-            <div class="section">
-                <!-- Folders -->
-                <br>
-                <h3 class="w3-text-white">Open Folder</h3>
-                <div class="buttons">
-                    <button id="btnOpenThemes" class="w3-button w3-gray w3-ripple w3-round">Themes</button>
-                    <br>
-                    <button id="btnOpenGames" class="w3-button w3-gray w3-ripple w3-round">Games</button>
-                    <br>
-                    <button id="btnOpenMusic" class="w3-button w3-gray w3-ripple w3-round">Music</button>
-                    <br>
-                    <button id="btnOpenVideo" class="w3-button w3-gray w3-ripple w3-round">Video</button>
-                    <br>
-                    <button id="btnOpenPictures" class="w3-button w3-gray w3-ripple w3-round">Pictures</button>
-                    <br>
-                    <button id="btnOpenSaveFiles" class="w3-button w3-gray w3-ripple w3-round">Save Files</button>
-                </div>
-            </div>
-
-            <div class="section">
-                <!-- Functions -->
-                <br>
-                <h3 class="w3-text-white">Functions</h3>
-                <div class="buttons">
-                    <button id="btnExtractArk4" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4</button>
-                    <br>
-                    <button id="btnTransferOfw" class="w3-button w3-deep-purple w3-ripple w3-round">Transfer OFW update
-                    </button>
-                    <br>
-                    <button id="btnCreatePlaylist" class="w3-button w3-deep-purple w3-ripple w3-round">Create music playlist
-                    </button>
-                    <br>
-                    <button id="btnOrganizeGames" class="w3-button w3-deep-purple w3-ripple w3-round">Organize games
-                    </button>
-                </div>
+        <div id="Functions" class="tabcontent">
+            <h3 class="w3-text-white">Select a function to perform</h3>
+            <div class="buttons">
+                <button id="btnExtractArk4" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4</button>
+                <button id="btnExtractChronoswitch" class="w3-button w3-deep-purple w3-ripple w3-round">Extract
+                    Chronoswitch
+                </button>
+                <button id="btnTransferOfw" class="w3-button w3-deep-purple w3-ripple w3-round">Transfer OFW update
+                </button>
+                <button id="btnCreatePlaylist" class="w3-button w3-deep-purple w3-ripple w3-round">Create music
+                    playlist
+                </button>
+                <button id="btnOrganizeGames" class="w3-button w3-deep-purple w3-ripple w3-round">Organize games
+                </button>
+                <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create missing
+                    folders
+                </button>
             </div>
         </div>
     </div>
@@ -84,6 +82,18 @@
     </div>
 </div>
 
+<script>
+    function openTab(evt, tabName) {
+        const tabcontent = document.querySelectorAll(".tabcontent");
+        tabcontent.forEach(tab => tab.style.display = "none");
+
+        const tabs = document.querySelectorAll(".tab-buttons div");
+        tabs.forEach(tab => tab.classList.remove("active"));
+
+        document.getElementById(tabName).style.display = "block";
+        evt.currentTarget.classList.add("active");
+    }
+</script>
 
 <script src="../dist/renderer.js" defer></script>
 </body>
