--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
             <button id="btnSelectMemoryCard" class="w3-button w3-blue w3-ripple w3-round">Select Memory Card</button>
             <span id="pathIndicator">No card selected</span>
         </div>
-        <div class="button-container">
-            <button id="brnOpenCardDir" class="w3-button w3-orange w3-ripple w3-round">Open</button>
-        </div>
+        <button id="brnOpenCardDir" class="w3-button w3-orange w3-ripple w3-round">Open</button>
         <!-- Tab buttons -->
         <div class="tab-buttons">
             <div onclick="openTab(event, 'OpenFolder')" class="active">Folders</div>
@@ -43,10 +41,13 @@
         <div id="Functions" class="tabcontent">
             <h3 class="w3-text-white">Perform function</h3>
             <div class="buttons">
-                <button id="btnExtractArk4" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4</button>
+                <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create missing folders</button>
+                <button id="btnExtractArk4Tmp" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4 Live</button>
+                <button id="btnExtractArk4Cipl" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4 cIPL</button>
+                <button id="btnExtractArk4Full" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4 Full</button>
+                <button id="btnExtractArk4Update" class="w3-button w3-deep-purple w3-ripple w3-round">Extract ARK4 Update</button>
                 <button id="btnExtractChronoswitch" class="w3-button w3-deep-purple w3-ripple w3-round">Extract Chronoswitch</button>
                 <button id="btnTransferOfw" class="w3-button w3-deep-purple w3-ripple w3-round">Transfer OFW update</button>
-                <button id="btnCreateFileStructure" class="w3-button w3-orange w3-ripple w3-round">Create missing folders</button>
                 <button id="btnCreatePlaylist" class="w3-button w3-deep-purple w3-ripple w3-round">Create music playlist</button>
                 <button id="btnOrganizeGames" class="w3-button w3-deep-purple w3-ripple w3-round">Organize games</button>
             </div>
