iso and games directory

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -29,6 +29,7 @@
             <h3 class="w3-text-white">Open PSP folder</h3>
             <div class="buttons">
                 <button id="btnOpenThemes" class="w3-button w3-gray w3-ripple w3-round">Themes</button>
+                <button id="btnOpenIso" class="w3-button w3-gray w3-ripple w3-round">ISO</button>
                 <button id="btnOpenGames" class="w3-button w3-gray w3-ripple w3-round">Games</button>
                 <button id="btnOpenMusic" class="w3-button w3-gray w3-ripple w3-round">Music</button>
                 <button id="btnOpenVideo" class="w3-button w3-gray w3-ripple w3-round">Video</button>
